--- a/www/builder/sources/ui/Checkbox/Checkbox.css
+++ b/www/builder/sources/ui/Checkbox/Checkbox.css
@@ -3,6 +3,5 @@ $imgsrc = ../images/ui
 	$(fleft block bg mr7 pointer wh14 bo#76849C bc#eaeef3 br3)
 }
 .app-ui-checkbox.checked {
-    $(boc#7E9CCA bgwhite)
-    $png = checkb
+    $(boc#7E9CCA bgwhite png=checkb)
 }
