--- a/www/builder/sources/components/SearchForm/controls/keywords/Keywords.css
+++ b/www/builder/sources/components/SearchForm/controls/keywords/Keywords.css
@@ -39,12 +39,21 @@ $imgsrc = ../images/searchform
 .app-keywords-left {
 	$(abs t l b r33% z2)
 }
+.app-keywords-left.switched {
+	$r68.5%
+}
 .app-keywords-right {
 	$(abs t l68.5% b r z1)	
+}
+.app-keywords-right.switched {
+	$l33%
 }
 .app-keywords-tags-title {
 	$(bold c#3B4452 fs16 lh16)
 }
 .app-keywords-area .app-tags-container {
 	$(abs mih0 nomaxh ha t22 l r b50%)
+}
+.app-keywords-area .app-tags-content {
+	$t75
 }
