foreach add/remove

--- a/www/builder/sources/controls/Tags/Tags.css
+++ b/www/builder/sources/controls/Tags/Tags.css
@@ -1,3 +1,5 @@
+$imgsrc = ../images/ui
+
 .app-tags-container {
 	$(rel mb6 bc#f3f5f7 p5 c#666 fs13 bo#dde5f3 br2 mih182 mah182 h182)
     box-shadow: 1px 1px 6px #f0f4f7;
@@ -7,4 +9,10 @@
 }
 .app-tags-item {
 	$(maw260 c#38986a bc#E8F3E7 bo#38986a pointer br3 pl10 pr30 m2 block fleft rel box h28 lh26 semibold)
+}
+.app-tags-remove {
+	$(png=tagsclearg pointer abs r7 t6 block bg wh15 opac7)
+}
+.app-tags-remove:hover {
+	$opac10
 }
