--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -88,6 +88,13 @@
 .app-keywords-tags-title{font-family:ptsansbold;color:#3B4452;font-size:16px;line-height:16px;}
 .app-keywords-area .app-tags-container{position:absolute;min-height:0;max-height:none;height:auto;top:22px;left:0;right:0;bottom:50%;}
 .app-keywords-area .app-tags-content{top:75px;}
+.app-tags-top{height:16px;white-space:nowrap;padding:2px 0 2px 0;}
+.app-tags-top-buttons{float:right;font-size:12px;}
+.app-tags-top-buttons-item{display:inline-block;height:18px;line-height:18px;}
+.app-tags-top-buttons-item:first-child{color:#5f6b7f;padding-right:12px;}
+.app-tags-top-buttons-item:nth-child(2){padding-left:14px;border-left:1px solid #cfd5e1;padding-right:3px;}
+.app-tags-top-buttons-item:nth-child(2) span{cursor:pointer;color:#a66666;}
+.app-tags-top-buttons-item:nth-child(2) span:hover{color:#6c3a3a;}
 /* SearchFormCreateFilterMenu */
 .app-popup-menu-outer-container.create-filters-menu .app-popup-menu-inner-container{border:none;}
 .app-popup-menu-outer-container.create-filters-menu{margin-top:3px;-webkit-box-shadow:0 5px 14px 0 rgba(0,0,0,0.75);-moz-box-shadow:0 5px 14px 0 rgba(0,0,0,0.75);box-shadow:0 5px 14px 0 rgba(0,0,0,0.75);border:none;width:278px;}
